--- a/src/main/webapp/WEB-INF/resources/css/main.css
+++ b/src/main/webapp/WEB-INF/resources/css/main.css
@@ -6,7 +6,7 @@
 }
 
 .home-image {
-	display:block;
+	display: block;
 	width: 100% !important;
 	height: 100% !important;
 }
@@ -26,4 +26,14 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+}
+
+.login-box {
+	/* text-align: center; */
+}
+
+.login-container {
+	width: 40%;
+	margin: auto;
+	margin-top: 100px;
 }
